# AION

./: .gitignore  FRONTEND_SPECIFICATION.md  INSTALLATION_GUIDE.md  PIPELINE_AUDIT_REPORT.md  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  progress.md  pyproject.toml  requirements.docker.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  exceptions.py  graph_store.py  kafka_client.py  logging.py  middleware.py  minio_client.py  neo4j_client.py  qdrant_client.py  redis_client.py  security.py
backend/app/integrations/: base_connector.py  document_processor.py  github_connector.py  slack_connector.py
backend/app/models/: __init__.py  base.py  disease.py  employee_profile.py  knowledge.py  organization.py  simulation.py  types.py  user.py
backend/app/repositories/: base_repository.py  disease_repository.py  graph_repository.py  knowledge_repository.py  user_repository.py
backend/app/services/: auth_service.py  board_advisor_service.py  decay_engine_service.py  disease_detection_service.py  intelligence_index_service.py  mri_service.py  ocsie_service.py  self_healing_service.py  simulation_service.py
backend/app/workers/: decay_worker.py  disease_worker.py  report_worker.py  (+2 more)
backend/data/: aion.db  graph_store.json
backend/deployment/: prometheus.yml
backend/neo4j_schema/: constraints.cypher  seed_data.cypher
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
(+130 files in other folders)
